--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600;800&display=swap');
+
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  background: var(--color-blue-100)
 }
 
 ol, ul {
   padding-left: 30px;
 }
 
-.board {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-
 .status {
   margin-bottom: 10px;
-}
-
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
-}
-
-.square:focus {
-  outline: none;
 }
 
 .kbd-navigation .square:focus {
@@ -51,11 +28,6 @@ ol, ul {
 
 .bolder {
   font-weight: bolder;
-}
-
-.flex-reverse {
-  display: flex;
-  flex-direction: column-reverse;
 }
 
 .box-winner {
