--- a/src/components/Moves/Moves.css
+++ b/src/components/Moves/Moves.css
@@ -25,7 +25,7 @@
     flex-direction: column;
     gap: 20px;
     border: 1px solid var(--color-blue-400);
-    padding: 5px 0 20px 5px;
+    padding: 10px 0 40px 20px;
     border-radius: 6px;   
 }
 
@@ -39,5 +39,6 @@
     border: 0;
     color: var(--color-blue-500);
     cursor: pointer;
-
+    font-size: var(--typography-base-font-size);
+    font-family: var(--typography-base-font-family);
 }
